<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo"
            android:layout_marginBottom="100dp"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="47dp" />


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="start"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/border1px">
        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:labelFor="@id/tv_email"
            android:hint="@string/email"
            android:textColorHint="@color/grey"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_gravity="start"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/border1px">
        <EditText
            android:id="@+id/editTextTextNewPass"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:labelFor="@+id/tv_password"
            android:ems="10"
            android:hint="@string/password"
            android:textColorHint="@color/grey"
             />
    </LinearLayout>


        <TextView
            android:id="@+id/tv_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/konfirmasi_password"
            android:layout_gravity="start"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/border1px">
            <EditText
            android:id="@+id/editTextTextNewPassConfirm"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:labelFor="@id/tv_confirm_password"
            android:ems="10"
            android:hint="@string/password"
            android:textColorHint="@color/grey"
             />
        </LinearLayout>


        <Button
            android:id="@+id/btnRegister"
            android:layout_marginVertical="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="@color/white"
            android:background="@drawable/button"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="446dp" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginVertical="30dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/blue"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>