<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white_grey"
    tools:context=".activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo"
            android:layout_marginBottom="30dp"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="47dp" />

<!--        <TextView-->
<!--            android:id="@+id/tv_email"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="20dp"-->
<!--            android:text="@string/email"-->
<!--            android:textColor="@color/grey"-->
<!--            />-->
<!--        <EditText-->
<!--            android:id="@+id/editTextTextEmailAddress"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="48dp"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/email"-->
<!--            android:labelFor="@+id/tv_email"-->
<!--            android:autofillHints="emailAddress"-->
<!--            android:gravity="center_horizontal"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--          />-->
<!--        <TextView-->
<!--            android:id="@+id/tv_password"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="@string/password"-->
<!--            android:textColor="@color/grey"/>-->
<!--        <EditText-->
<!--            android:id="@+id/editTextTextPassword"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="48dp"-->
<!--            android:gravity="center_horizontal"-->
<!--            android:ems="10"-->
<!--            android:labelFor="@+id/tv_password"-->
<!--            android:inputType="textPassword"-->
<!--            android:hint="@string/password"-->
<!--            android:autofillHints="Password"-->
<!--            android:layout_gravity="center_horizontal"/>-->

<!--        <TextView-->
<!--            android:id="@+id/textView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="72dp"-->
<!--            android:text="TextView"-->
<!--            android:layout_gravity="center_horizontal"/>-->



        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">



            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="20sp" />


                <LinearLayout
                    android:id="@+id/linearlayoutemail"
                android:layout_below="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="15dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/border1px">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputlayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_email"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


            <TextView
                android:id="@+id/textViewPassword"
                android:layout_below="@+id/linearlayoutemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="Password"
                android:textColor="#000"
                android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
                android:layout_below="@+id/textViewPassword"
            android:layout_marginBottom="25dp"
            android:background="@drawable/border1px">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputlayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_marginVertical="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:hint="@string/masukkan_password"/>
            </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/textInputlayoustPassword"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/textViewPassword"-->
<!--                app:passwordToggleEnabled="true">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:paddingHorizontal="15dp"-->
<!--                    android:layout_marginBottom="25dp"-->
<!--                    android:background="@drawable/border1px"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent">-->

<!--                    <com.google.android.material.textfield.TextInputEditText-->
<!--                        android:id="@+id/editTextTsextPassword"-->
<!--                        android:layout_marginVertical="5dp"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:inputType="textPassword"-->
<!--                        android:hint="@string/masukkan_password"/>-->

<!--                </LinearLayout>-->

<!--            </com.google.android.material.textfield.TextInputLayout>-->






        </RelativeLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"


            android:background="@drawable/button"
            android:text="@string/Login"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginVertical="30dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:text="@string/register"
                android:textColor="@color/blue"
                android:clickable="true"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>